dataset/imported/kyverno-tests/cp_pdb_minavailable/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: context
spec:
  resources:
    - apiVersion: policy/v1
      kind: PodDisruptionBudget
      metadata:
        name: nginx-pdb
        namespace: nginx
      spec:
        minAvailable: 2
        selector:
          matchLabels:
            app: ngin
